[package]
name = "excel_writer"
version = "0.2.1"
license = "MIT"
authors = ["Bob <nottxy@gmail.com>"]
description = "Wild Excel Writer"
documentation = "https://docs.rs/excel_writer"
repository = "https://github.com/nottxy/excel_writer"
keywords = ["excel"]
edition = "2018"

[dependencies]
serde = { version = '1.0', features = ['derive'] }
zip = { version = "0.5", default-features = false, features = ["deflate"] }
lazy_static = "1.4"
tera = "1.2"
excel_column_id = { version = "0.1", features = ["with-serde"] }